@@ -56,5 +56,6 @@ function Install-IisVirtualDirectory
         Invoke-AppCmd delete vdir $vdirID
     }
     
+    $Path = [IO.Path]::GetFullPath( $Path )
     Invoke-AppCmd add vdir /app.name:"$SiteName/" / /path:/$Name /physicalPath:"$Path"       
 }
