@@ -89,6 +89,7 @@ function Install-IisWebsite
         Uninstall-IisWebsite -Name $Name
     }
     
+    $Path = [IO.Path]::GetFullPath( $Path )
     if( -not (Test-Path $Path -PathType Container) )
     {
         $null = New-Item $Path -ItemType Directory -Force
